// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toast /> Alert story renders snapshot 1`] = `
<div
  class="toast toast--alert"
>
  <div
    class="toast__content"
  >
    <svg
      fill="currentColor"
      height="16px"
      width="16px"
    >
      <path
        d="M20 6h-1v8c0 .55-.45 1-1 1H6v1c0 1.1.9 2 2 2h10l4 4V8c0-1.1-.9-2-2-2zm-3 5V4c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v13l4-4h9c1.1 0 2-.9 2-2z"
      />
    </svg>
    <p
      class="toast__text"
    >
      You've got toast!
    </p>
  </div>
</div>
`;

exports[`<Toast /> NotDismissable story renders snapshot 1`] = `
<div
  class="toast toast--success"
>
  <div
    class="toast__content"
  >
    <svg
      fill="currentColor"
      height="16px"
      width="16px"
    >
      <path
        d="M20 6h-1v8c0 .55-.45 1-1 1H6v1c0 1.1.9 2 2 2h10l4 4V8c0-1.1-.9-2-2-2zm-3 5V4c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v13l4-4h9c1.1 0 2-.9 2-2z"
      />
    </svg>
    <p
      class="toast__text"
    >
      You've got toast!
    </p>
  </div>
</div>
`;

exports[`<Toast /> Success story renders snapshot 1`] = `
<div
  class="toast toast--success"
>
  <div
    class="toast__content"
  >
    <svg
      fill="currentColor"
      height="16px"
      width="16px"
    >
      <path
        d="M20 6h-1v8c0 .55-.45 1-1 1H6v1c0 1.1.9 2 2 2h10l4 4V8c0-1.1-.9-2-2-2zm-3 5V4c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v13l4-4h9c1.1 0 2-.9 2-2z"
      />
    </svg>
    <p
      class="toast__text"
    >
      You've got toast!
    </p>
  </div>
</div>
`;
